Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14136

lfs mirror extend prints confusing error messages

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      In some error cases (including full devices) lfs mirror extend prints confusing error messages and exits with the wrong exit status:

      # lfs setstripe -p ddn_ssd -c2 f0
      # dd if=/dev/zero of=f0 bs=1M
      dd: error writing ‘f0’: No space left on device
      1321+0 records in
      1320+0 records out
      1384222720 bytes (1.4 GB) copied, 39.7723 s, 34.8 MB/s
      # lfs df -h -p ddn_ssd
      UUID                       bytes        Used   Available Use% Mounted on
      lustre-MDT0000_UUID       122.4M        2.1M      109.4M   2% /mnt/lustre[MDT:0]
      lustre-MDT0001_UUID       122.4M        1.8M      109.6M   2% /mnt/lustre[MDT:1]
      lustre-OST0000_UUID       732.7M      677.4M      656.0K 100% /mnt/lustre[OST:0]
      lustre-OST0001_UUID       732.7M      677.3M      752.0K 100% /mnt/lustre[OST:1]
      
      filesystem_summary:         1.4G        1.3G        1.4M 100% /mnt/lustre
      
      # lfs mirror extend -N -p ddn_ssd f0
      lfs mirror extend: cannot create composite file '/mnt/lustre/.
                                                                       :VOLATILE:0000:10E609C1': No space \
      left on device
      error: lfs mirror extend: f0: cannot create volatile file: Operation not permitted
      # echo $?
      1
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: